# wcw-recorder

./: README.md  package.json
src/: Settings.tsx  bindings.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  tray.rs  windows.rs
src-tauri/src/recorder/: camera.rs  main.rs
