[package]
name = "recorder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
    "image-ico",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
parking_lot = "0.12"
once_cell = "1.20"
specta = "=2.0.0-rc.20"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
debug_print = "1.0.0"
mouse_position = "0.1.4"
opencv = "0.93" # For capturing the camera
image = "0.25" # For image processing
vpx-encode = { path = "../vpx-encode", version = "0.6", features = ["vp9"] }
webm = "1"
xcap = { path = "../xcap" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Graphics_Imaging",
    "Media_Ocr",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Storage",
    "Storage_Streams",
] }
